Added some base styling :D

--- a/lab-eddie/src/index.html
+++ b/lab-eddie/src/index.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>There is no god</title>
   </head>
   <body>
-    <div id="root">
-    </div>
+    <div id="root"></div>
+    <footer></footer>
   </body>
 </html>
