--- a/lab-eddie/src/index.html
+++ b/lab-eddie/src/index.html
@@ -5,6 +5,9 @@
     <title>There is no god</title>
   </head>
   <body>
+    <header>
+      <h1>Eddie's Kick Ass Dashboard</h1>
+    </header>
     <div id="root"></div>
     <footer></footer>
   </body>
